--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.error.include-stacktrace=never
-database.url=jdbc:sqlserver://telerik.badmin.org:1433;database=vwallet
+database.url=jdbc:sqlserver://telerik.badmin.org:1433;database=wallet
 database.username=minus273dot15
 database.password=Apollo11-1969-GoodLuckMr.Gorsky
 
