--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
-
+    implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
+    implementation 'javax.validation:validation-api:2.0.1.Final'
 
 }
 
