--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,11 @@ repositories {
 }
 
 dependencies {
+    implementation 'io.liquer.pencil:pencil-spring-boot-starter:2.0.2'
+    implementation 'io.liquer.pencil:pencil-spring-boot-starter:2.0.2'
+    implementation 'io.liquer.pencil:pencil-spring-boot-starter:2.0.2'
     runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
