--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ database.url=jdbc:sqlserver://telerik.badmin.org:1433;database=wallet
 database.username=minus273dot15
 database.password=Apollo11-1969-GoodLuckMr.Gorsky
 
+# SMTP Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wallet.project.a48@gmail.com
+spring.mail.password=Apollo11-1969-GoodLuckMr.Gorsky
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
