--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor=TRACE
+#logging.level.org.hibernate.type.descriptor=TRACE
 logging.file.path=logs
