--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter'
     runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -25,7 +26,6 @@ dependencies {
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
     implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
     implementation 'javax.validation:validation-api:2.0.1.Final'
-
 }
 
 test {
