Verification email update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,12 @@ database.username=minus273dot15
 database.password=Apollo11-1969-GoodLuckMr.Gorsky
 
 # SMTP Configuration
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=wallet.project.a48@gmail.com
+spring.mail.host=mail.badmin.org
+spring.mail.port=25
+spring.mail.username=wallet.project.a48@badmin.org
 spring.mail.password=Apollo11-1969-GoodLuckMr.Gorsky
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=false
 
 logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor=TRACE
