--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.mail.password=Apollo11-1969-GoodLuckMr.Gorsky
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=false
 
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor=TRACE
 logging.file.path=logs
