--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.error.include-stacktrace=never
 database.url=jdbc:sqlserver://telerik.badmin.org:1433;database=wallet
 database.username=minus273dot15
 database.password=Apollo11-1969-GoodLuckMr.Gorsky
-
+server.port=8081
 # SMTP Configuration
 spring.mail.host=mail.badmin.org
 spring.mail.port=25
@@ -11,6 +11,6 @@ spring.mail.password=Apollo11-1969-GoodLuckMr.Gorsky
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=false
 
-#logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor=TRACE
 logging.file.path=logs
