User invitation system update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.error.include-stacktrace=never
 database.url=jdbc:sqlserver://telerik.badmin.org:1433;database=wallet
 database.username=minus273dot15
 database.password=Apollo11-1969-GoodLuckMr.Gorsky
-server.port=8081
+server.port=80
 # SMTP Configuration
 spring.mail.host=mail.badmin.org
 spring.mail.port=25
@@ -14,3 +14,4 @@ spring.mail.properties.mail.smtp.starttls.enable=false
 logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor=TRACE
 logging.file.path=logs
+spring.jpa.open-in-view=false
